moved footer out of main on calendar page to correct overlap

--- a/calendar-page/calendar-style.css
+++ b/calendar-page/calendar-style.css
@@ -41,12 +41,11 @@ tr {
 }
 
 .calBlock{
-  float: right;
-  background-color: black;
+  /*float: right;*/
   font-size: 28px;
 }
 .calContainer {
-  float: left;
+  /*float: left;*/
   width: 800px;
   height: 600px;
   margin: auto;
@@ -73,4 +72,6 @@ tr {
 
 #calBox {
   width: 90%;
+  height: 60%;
+  margin-bottom: 10px;
 }
